[package]
name = "rget"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full", "process"] }
futures-util = "0.3"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
bytes = "1"
anyhow = "1.0"
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
